tests/test0202.ctr
‘SINGLE_LANGUAGE’.

Nil := True.
